--- a/css/style.css
+++ b/css/style.css
@@ -78,26 +78,10 @@ header {
     color: #000000;
     text-shadow: 2px 2px #ED582E;
   }
-
-  .main {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    border: 2px solid black;
-  }
-
-  .flexContainer {
-    display: flex;
-    width: 95%;
-  }
   
-  .flexContenedor > div {
-    font-size: 22px;
-    width: 95%;
-  }
-
 .director {
-  width: 50%;
+  width: 55%;
+  justify-content: center;
   text-align: center;
 }
 
@@ -107,23 +91,24 @@ header {
   margin-bottom: 40px;
 }
 
-  .txtImage{
-    text-align: center;
-  }
+.flexContenedor {
+  display: flex;
+  justify-content: center;
+  margin-top: 50px;
+  width: 100%;
+}
 
-  .txtImage img{
-    width: 60%;
-    border-radius: 10px;
-  }
+.txtImage img{
+  width: 70%;
+  text-align: center;
+}
 
-  .txtTributo{
-    width: 100%;
-    border: 2px solid black;
-  }
-
-  .txtTributo h1{
-      text-align: center;
-   }
+.txtTributo{
+  display: column;
+  justify-content: left;
+  width:50%;
+  font-size: 21px;
+}
 
   h1, h3, p{
     color:#fff;
