--- a/css/videos.css
+++ b/css/videos.css
@@ -51,13 +51,15 @@ header {
   }
 
     .showSlider {
-    display: none
+    display: none;
+    max-width: 32%;
     }
+    
     .showSlider img {
     width: 100%;
     }
     .container {
-    max-width: 1000px;
+    max-width: 65%;
     position: relative;
     margin: auto;
     }
