--- a/css/director.css
+++ b/css/director.css
@@ -53,7 +53,6 @@ header {
     color: #ED582E;
   }
   
-
   .imagen-banner{
     text-align: center;
   }
@@ -89,15 +88,23 @@ header {
   }
 
   .txtImage img{
-    width: 80%;
+    width: 600px;
+    height: 700px;
     margin-left: 100px;
+    border-radius: 10px;
   }
 
   .txtTributo{
-    display: column;
+    display: column; 
     justify-content: left;
-    width:50%;
+    width:55%;
     font-size: 21px;
+  }
+
+  .txtDirector{
+    width: 90%;
+    color: #ED582E;
+    text-shadow: 2px 2px 4px #5b5b5b;
   }
 
   h1, h3, p{
