--- a/css/videos.css
+++ b/css/videos.css
@@ -57,7 +57,7 @@ header {
     width: 100%;
     }
     .container {
-    max-width: 1000px;
+    max-width: 100%;
     position: relative;
     margin: auto;
     }
