--- a/css/videos.css
+++ b/css/videos.css
@@ -69,15 +69,23 @@ header {
       display: flex;
       flex-direction: column;
       justify-content: center;
-      border: 2px solid black;
+      /* border: 2px solid blue; */
+      max-width: 90%;
     }
-
+#video_content{
+  visibility: hidden;
+}
     .video_container{
       width: 60%;
+      flex: 1;
+      /* border: 2px solid yellow; */
     }
 
     .text_container{
-      width: 50%;
+      width: 30%;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
     }
 
 
@@ -145,7 +153,7 @@ header {
     }
 
     .pie-pagina{
-        display: flex;
+        display: flex;        
         flex-direction: column;
         justify-content: center;
         background-color: #111111; 
@@ -153,4 +161,6 @@ header {
         text-align: center;
         width: 100%;
         height: 75px;
+        position: fixed;
+  bottom: 0; 
       }
