--- a/css/videos.css
+++ b/css/videos.css
@@ -4,6 +4,10 @@ body {
     margin: 0px;
 }
 
+main{
+  margin-bottom: 4%;
+}
+
 header {
   display: flex;
   justify-content: space-between;
@@ -63,22 +67,27 @@ header {
     max-width: 65%;
     position: relative;
     margin: auto;
+
     }
 
     #video{
       display: flex;
       flex-direction: column;
       justify-content: center;
-      /* border: 2px solid blue; */
       max-width: 90%;
     }
 #video_content{
   visibility: hidden;
 }
     .video_container{
+      display: flex;
+      justify-content: center;
       width: 60%;
       flex: 1;
-      /* border: 2px solid yellow; */
+    }
+
+    .video_container__iframe{
+      right: 0;
     }
 
     .text_container{
@@ -161,6 +170,6 @@ header {
         text-align: center;
         width: 100%;
         height: 75px;
-        position: fixed;
-  bottom: 0; 
+        /* position: fixed; */
+        bottom: 0; 
       }
