--- a/css/galeria.css
+++ b/css/galeria.css
@@ -1,12 +1,12 @@
 @import url("style.css");
 
-#imgScatman{
+#imgScatman {
   border-radius: 10px;
   cursor: pointer;
   transition: 0.3s;
 }
 
-#imgScatman:hover{
+#imgScatman:hover {
   opacity: 0.7;
 }
 
@@ -20,9 +20,9 @@
   width: 100%;
   height: 100%;
   overflow: auto;
-  background-color: rgba(0,0,0,0.9);
+  background-color: rgba(0, 0, 0, 0.9);
 }
-img{
+img {
   border-radius: 10px;
 }
 
@@ -38,7 +38,7 @@ img{
   transform: scale(1.04);
 }
 
-#caption{
+#caption {
   color: #fff;
   font-size: 20px;
   font-weight: bold;
