--- a/css/reparto.css
+++ b/css/reparto.css
@@ -1,80 +1,76 @@
-main{
-    display: flex;
-    flex-direction: column;
-    margin-top: 50px;
-    justify-content: center;
-    align-items: center;
+main {
+  display: flex;
+  flex-direction: column;
+  margin-top: 50px;
+  justify-content: center;
+  align-items: center;
 }
 
-.casting{
+.casting {
   width: 55%;
   justify-content: center;
   text-align: center;
 }
 
 .flexContainer {
-    display: flex;
-    /* margin-top: 50px; */
-    justify-content: center;
-    width: 90%;
+  display: flex;
+  /* margin-top: 50px; */
+  justify-content: center;
+  width: 90%;
 
-    /* border: 10px solid black; */
-  }
-  
-  .imgContainer {
-   width: 50%;
-    /* border: 2px solid blue; */
-    display: flex;
-    justify-content: center;
-    
-  }
-  .casting_image{
-    width: 100%;
-    /* border: 10px solid yellow; */
-  }
-  .casting_image img{
-    width: 70%;
-    margin-right: 5%;
-    float: right;
-    /* border: 2px solid yellow; */
-  }
-
-  #imgJack {
-    
-    width: 100%;
-    height: auto; 
-    margin: 10px auto;
-    
-
-    /* border: 10px solid rgb(174, 249, 0); */
-  }
-  
-  #imgShelly{
-    
-    width: 100%;
-    height: auto;
-    margin: 10px auto;
- 
-    /* border: 10px solid rgb(174, 249, 0); */
-  }
-
-  .txtContained {
-    width: 50%;
-    /* border: 2px solid black; */
-  }
-
-  .separate{
-    width: 40%;
-    margin-top: 20px;
-    margin-bottom: 20px;
+  /* border: 10px solid black; */
 }
 
-.txtCasting{
-  color: #ED582E;
+.imgContainer {
+  width: 50%;
+  /* border: 2px solid blue; */
+  display: flex;
+  justify-content: center;
+}
+.casting_image {
+  width: 100%;
+  /* border: 10px solid yellow; */
+}
+.casting_image img {
+  width: 70%;
+  margin-right: 5%;
+  float: right;
+  /* border: 2px solid yellow; */
+}
+
+#imgJack {
+  width: 100%;
+  height: auto;
+  margin: 10px auto;
+
+  /* border: 10px solid rgb(174, 249, 0); */
+}
+
+#imgShelly {
+  width: 100%;
+  height: auto;
+  margin: 10px auto;
+
+  /* border: 10px solid rgb(174, 249, 0); */
+}
+
+.txtContained {
+  width: 50%;
+  /* border: 2px solid black; */
+}
+
+.separate {
+  width: 40%;
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
+
+.txtCasting {
+  color: #ed582e;
   text-shadow: 2px 2px 4px #5b5b5b;
 }
 
-.txtContained{
+.txtContained {
   color: #ffffff;
   margin-left: 25px;
   margin-top: 0;
